--- a/app/widgets/com.orthlieb.combobox/views/pickerview.xml
+++ b/app/widgets/com.orthlieb.combobox/views/pickerview.xml
@@ -1,8 +1,14 @@
 <Alloy>
-	<Popover id='popover' ns="Ti.UI.iPad" platform="ios" formFactor="tablet">
-		<Button id="cancel" onClick="PickerButtonClick">Cancel</Button>
-		<Button id="done" onClick="PickerButtonClick">Done</Button>
-		<Picker id="picker"/>
+	<Popover id='popover' ns="Ti.UI.iPad" platform="ios" formFactor="tablet" onHide="hidePopOver">
+		<ContentView id='insidePopover'>
+			<NavigationWindow id='naviPopover'>
+                <Window id='winPopover'>
+					<LeftNavButton id="cancel" onClick="PickerButtonClick" title="Cancel"/>
+					<RightNavButton id="done" onClick="PickerButtonClick" title="Done"/>
+					<Picker id="picker"/>
+				</Window>
+			</NavigationWindow>
+		</ContentView>
 	</Popover>
 
 	<View id="pickerview" platform="ios" formFactor="handheld">
